--- a/healix-web/src/index.css
+++ b/healix-web/src/index.css
@@ -17,7 +17,7 @@ body, html {
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
