--- a/healix-web/src/index.css
+++ b/healix-web/src/index.css
@@ -18,7 +18,7 @@ body, html {
   font-weight: 400;
 
   color-scheme: light;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgb(255, 255, 255);
   background-color: #242424;
 
   font-synthesis: none;
